rust/mlt/src/ui/snapshots/mlt__ui__tests__keys_expand_a_layer_and_select_a_feature.snap
---
source: mlt/src/ui/tests.rs
expression: render(&mut app)
---
"┌sample.mlt - h:help, q:quit,┐┌Map View────────────────────────────────────────────────────────────┐"
"│   All                      ││                                                                    │"
"│     Layer: water (2 feature││                                                                    │"
"│>>     Feat 0: Polygon (10v,││     ⢰⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⢲⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⢒⡲⡆     │"
"│       Feat 1: MultiPolygon ││     ⢸                           ⢸                 ⡤⠤⠤⠤⠤⠤⠤⢤⡔⠁ ⡇     │"
"│     Layer: roads (2 feature││     ⢸                           ⢸                 ⡇    ⡠⠊⠁⡇  ⡇     │"
"│     Layer: poi (2 features,││     ⢸      ⢀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣸⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣇⣀⣀⠔⠊   ⡇  ⡇     │"
"│                            ││     ⢸      ⢸                    ⢸                 ⣧⣒⣹⣀⣀⣀⣀⣀⡇  ⡇     │"
"│                            ││     ⢸      ⢸                    ⢸              ⢀⠤⠊  ⢸        ⡇     │"
"│                            ││     ⢸      ⢸      ×             ⢸            ⣀⠔⠁    ⢸        ⡇     │"
"│                            ││     ⢸      ⢸                    ⢸         ⢀⡠⠊       ⢸        ⡇     │"
"│                            ││     ⢸      ⢸                    ⢸       ⢀⠔⠁         ⢸        ⡇     │"
"│                            ││     ⢸      ⢸             ⡖⠒⠒⠒⠒⠒⠒⢺⠒⠒⠒⠒⠒⡲⡎⠁           ⢸        ⡇     │"
"│                            ││     ⢸      ⢸             ⡇      ⢸  ⢀⠔⠊ ⡇            ⢸        ⡇     │"
"└◄██████████════════════════►┘│     ⢸      ⢸             ⡇      ⢸⡠⠒⠁   ⡇            ⢸        ⡇     │"
"┌Properties (feat 0)─────────┐│     ⢸⠉⠉⠉⠉⠉⠉⢹⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⡏⠉⠉⠉⠉⢉⠭⢻⠉⠉⠉⠉⠉⠉⡏⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⢹⠉⠉⠉⠉⠉⠉⠉⠉⡇     │"
"│class: lake                 ││     ⢸      ⢸             ⡇  ⡠⠔⠁ ⢸      ⡇            ⢸        ⡇     │"
"│name: Loch                  ││     ⢸      ⢸             ⣇⡠⠊    ⢸      ⡇            ⢸        ⡇     │"
"│                            ││     ⢸      ⢸           ⢀⠔⠉⠉⠉⠉⠉⠉⠉⢹⠉⠉⠉⠉⠉⠉⠁            ⢸        ⡇     │"
"│                            ││     ⢸      ⢸         ⡠⠊⠁        ⢸               ×   ⢸        ⡇     │"
"│                            ││     ⢸      ⢸      ⢀⠔⠉           ⢸            ×      ⢸        ⡇     │"
"│                            ││     ⢸      ⢸    ⡠⠒⠁             ⢸                   ⢸        ⡇     │"
"└────────────────────────────┘│     ⢸  ⢸⠉⠉⠉⢹⠉⢉⠭⢻                ⢸                   ⢸        ⡇     │"
"┌Geometry────────────────────┐│     ⢸  ⢸   ⡸⠴⠥⠤⢼⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⢼⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠼        ⡇     │"
"│Type: Polygon               ││     ⢸  ⢸⢀⡠⠊    ⢸                ⢸                            ⡇     │"
"│Vertices: 10                ││     ⢸ ⢀⠜⠓⠒⠒⠒⠒⠒⠒⠚                ⢸                            ⡇     │"
"│Rings: 2                    ││     ⠸⠮⠥⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠼⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠇     │"
"│  Ring 0: 5v, CCW           ││                                                                    │"
"│  Ring 1: 5v, CW            ││                                                                    │"
"└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘"
