rust/mlt/src/ui/snapshots/mlt__ui__tests__layer_summary_lists_every_value_type_and_skips_unknown_geometries.snap
---
source: mlt/src/ui/tests.rs
expression: render(&mut app)
---
"┌odd.mlt - h:help, q:quit, En┐┌Map View────────────────────────────────────────────────────────────┐"
"│   All                      ││                                                                    │"
"│>>   Layer: odd (5 features,││                                                                    │"
"│       Feat 0: Point        ││     ⢰⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⡆     │"
"│       Feat 1: Unknown      ││     ⢸                                                        ⡇     │"
"│       Feat 2: Unknown      ││     ⢸                                                        ⡇     │"
"│       Feat 3: Unknown      ││     ⢸                                                        ⡇     │"
"│       Feat 4: Unknown      ││     ⢸                                                        ⡇     │"
"│                            ││     ⢸                                                        ⡇     │"
"│                            ││     ⢸                                                        ⡇     │"
"│                            ││     ⢸                                                        ⡇     │"
"│                            ││     ⢸                                                        ⡇     │"
"│                            ││     ⢸                                                        ⡇     │"
"│                            ││     ⢸                                                        ⡇     │"
"└◄███████████═══════════════►┘│     ⢸                                                        ⡇     │"
"┌Properties (layer odd)──────┐│     ⢸                                                        ⡇     │"
"│Features: 5                 ││     ⢸                                                        ⡇     │"
"│Properties: 4               ││     ⢸                                                        ⡇     │"
"│a: array                    ││     ⢸                                                        ⡇     │"
"│b: bool                     ││     ⢸                                                        ⡇     │"
"│n: null | string            ││     ⢸                                                        ⡇     │"
"│o: object                   ││     ⢸                                                        ⡇     │"
"└────────────────────────────┘│     ⢸                                                        ⡇     │"
"┌Geometry (layer odd)────────┐│     ⢸                                                        ⡇     │"
"│Vertices: 9                 ││     ⢸                                                        ⡇     │"
"│Point: 1                    ││     ×                                                        ⡇     │"
"│                            ││     ⠸⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠇     │"
"│                            ││                                                                    │"
"│                            ││                                                                    │"
"└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘"
