rust/mlt/src/ui/snapshots/mlt__ui__tests__mbtiles_center_tile_zoom_and_pan_move_the_viewport.snap
---
source: mlt/src/ui/tests.rs
expression: render(&mut app)
---
"┌Properties──────────────────┐┌World Map - 2/1/1 - zoom 2.0  drag=pan  hover=info  q/Esc quit──────┐"
"│Hover over a feature to     ││⡇⢠⡪⠜      ⠰⡁  ⣀⠤⠒⡡⠊                                 ⣼⠃             ⢸│"
"│inspect properties          ││⡧⠓⡣⡄     ⢀⠔⠁⢰⠭⣤⠒⠊                                  ⡰⢹              ⢸│"
"│                            ││⡇⢸⠈⠙⠄   ⡠⠊   ⠉⠒⠭⣶⣤⣀                              ⢀ ⡇⠸⡀             ⢸│"
"│                            ││⣷⠊     ⠈⢒⠆    ⠲⡛⠫⡍                              ⢰⠙⣤⡣⠔⠓             ⢸│"
"│                            ││⡏⠉⠒⠒⠊⠉⠑⠊⠁      ⠑⠼⠶⠖⠚⠛⠭⣒⢄                        ⠸⠊⢈⠎⢢              ⢸│"
"│                            ││⡏⠉⠒⠊⠉⠉⠉⢢               ⢹⢆                         ⢸ ⡬⠆             ⢸│"
"│                            ││⡗⠤⠤⠔⠒⠒⠤⠊                ⠹⣆                    ⢀⣀⡀⢠⠼⢀⡸⠄             ⢸│"
"│                            ││⡇⡤⢔⠆⡠⠔⡄⡖⠒⢢               ⠹⣆                   ⠸⡀⠈⠁⣀⡨⠆              ⢸│"
"│                            ││⡟ ⠘⠜  ⠈⡎⣒⠶⢗               ⢹⢆⢀                  ⢧ ⣠⣘⡄               ⢸│"
"│                            ││⣇⡀     ⠉   ⠉⣆⢤           ⠠⣃⢌⠛⡄               ⢀⠖⠉⢠⡀⠑⡅               ⢸│"
"│                            ││⡗⠥⣀⣀    ⢀     ⠉⠒⢄          ⡖⠳⢼               ⢠⠃⢀⣜⣑⣤⡃               ⢸│"
"│                            ││⣇  ⢸⠉⠛⢖⠊⠁⠑⢄     ⠈⣆        ⠘⠢⠔⣺               ⡬⢍⡹⡻⠝⠉                ⢸│"
"│                            ││⡇⢱⢀⠎  ⡜   ⡭⡒⢄   ⠉⠒⠤⡀       ⢀⠔⠁⡇            ⡷⠴⠕⠒⠉                   ⢸│"
"│                            ││⡇⠈⠊⣀ ⢀⡸  ⠘⠴⠁⢀⠇     ⠘⠤⡄     ⢎  ⡇        ⢀⠤⣀⡼⠁                       ⢸│"
"│                            ││⡏⠉⢹⡭⡉⠉⠉⠉⠉⣉⣉⣉⡏⠉⠉⠉⠹⡉⠫⡉⡩⠋⠉⠉⠉⠉⠉⠫⡉⢝⠋⠉⠉⠉⠉⠉⠉⢉⡽⠝⠛⠉⠉⠉⠉⠉⠉⠉⠉⠽⢍⡙⠝⠉⠛⠉⠹⡉⠉⠉⠉⠉⠉⠉⠉⠉⠉⢹│"
"│                            ││⣇⡠⢳⠁⠈⡑⢢⡀⠐⠥⠤⠴⠤⡀   ⠈⢢⠈        ⠸⡈⢢     ⢠⠇           ⠈⢛⣅⡀ ⢀⣀⠤⠊         ⢸│"
"│                            ││⡇ ⠉⠣⢊⢬⠍⢉ ⢀⣀ ⡀⠘⠤⣀⡑⡦⢄⠇         ⢣⡱    ⢠⠏               ⠈⠉⠁            ⢸│"
"│                            ││⡇    ⠁ ⠘⠃⡇ ⠉⠈⠢⣀⣀⠈⠙⠂           ⠫⢕⣤⣄⡀⣼                               ⢸│"
"│                            ││⡇        ⡸     ⢸  ⢠⢢             ⠈⠚⠃                               ⢸│"
"│                            ││⡇       ⠈⢢     ⠈⠣⠒⠁ ⠣⡀                                         ⢰⢒⣖⡀⢸│"
"│                            ││⡗⠤⢄⡀     ⢈⠆          ⠵⣀                                        ⢇×⣰⡁⢸│"
"│                            ││⡇  ⠈⠉⠑⡆⠠⡔⠊             ⠑⠢⡀                                  ⣀⠤⣖⣪⠒⢄⠘⣼│"
"│                            ││⡇     ⢇ ⢱                ⢱                                  ⣱ ⣠⢃⣏⠁ ⢸│"
"│                            ││⡇      ⠑⠁        ⢀⣀⣀⣀⣀⣀⠤⡪⣳⡁                                  ⠉ ⣨⠽⡡⣤⢼│"
"│                            ││⣧⠴⣢⣀⡀          ⣠⡴⠕⢒⠖⠉⠂ ⢴⠁⠈⠉⣽                                    ⣤⠒⠵⢹│"
"│                            ││⡗⠙⣤⠿⣷⡢⢄⡀      ⢊⠏⢱ ⠈⠶⣖⣄⢆⠉⠉⠙⠋⠓⠁                                    ⠉⢢⢸│"
"│                            ││⡇⢐⢯⠊⢠⣻⡜⢙⣠⣤⡤⠊⠉⠉⠁⡤⠒⠉⣟⡡⠔⠊⠁                                      ⡠⠤⠤⣀⣀⣎⢸│"
"│                            ││⡇⠈⠦⠃ ⠾⠶⠟⠋   ⢀⣀⠼⠄                                            ⠘⡶⢴    ⢹│"
"└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘"
