rust/mlt/src/ui/snapshots/mlt__ui__tests__scan_events_drive_the_browser_through_poll.snap
---
source: mlt/src/ui/tests.rs
expression: render(&mut app)
---
"┌MLT Files (1 found, 1 analyzing…) - ↑/↓ navigate, Enter open, h help┐┌Tile Preview────────────────┐"
"│   File                  Size   Enc % Layers   Features Notes       ││Select a tile file (.mlt /  │"
"│>> point-boolean.mvt …        …       …      …                      ││.mvt) to preview            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    │└────────────────────────────┘"
"│                                                                    │┌Filter (click to toggle)────┐"
"│                                                                    ││[Reset filters]             │"
"│                                                                    ││                            │"
"│                                                                    ││Extensions:                 │"
"│                                                                    ││  [ ] mvt                   │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    │└────────────────────────────┘"
"│                                                                    │┌File Info───────────────────┐"
"│                                                                    ││Analyzing…                  │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"└────────────────────────────────────────────────────────────────────┘└────────────────────────────┘"
