rust/mlt/src/ui/snapshots/mlt__ui__tests__scan_streams_files_into_the_browser.snap
---
source: mlt/src/ui/tests.rs
expression: render(&mut app)
---
"┌MLT Files (0 found, scanning…) - ↑/↓ navigate, Enter open, h help, q┐┌Tile Preview────────────────┐"
"│   File     Size   Enc % Layers   Features Notes                    ││Select a tile file (.mlt /  │"
"│                                                                    ││.mvt) to preview            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    │└────────────────────────────┘"
"│                                                                    │┌Filter (click to toggle)────┐"
"│                                                                    ││[Reset filters]             │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    │└────────────────────────────┘"
"│                                                                    │┌File Info───────────────────┐"
"│                                                                    ││Scanning                    │"
"│                                                                    ││../../test/fixtures/simple… │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"└────────────────────────────────────────────────────────────────────┘└────────────────────────────┘"
