rust/mlt/src/ui/snapshots/mlt__ui__tests__small_terminal_shows_scrollbars_and_scrolls_the_tree_sideways-2.snap
---
source: mlt/src/ui/tests.rs
expression: "render_sized(&mut app, 60, 16)"
---
"┌sample.mlt - h:h┐┌Map View────────────────────────────────┐"
"│                ▲│                                        │"
"│er: water (2 fea█│   ⢰⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⢲⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⣒⣒⣒⣒⣒⠶⡆   │"
"│eat 0: Polygon (█│   ⢸   ⢀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣸⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣇⣀⡠⠊⢹ ⡇   │"
"│eat 1: MultiPoly║│   ⢸   ⢸   ×       ⢸        ⢀⡠⠓⢻⠒⠒⠚ ⡇   │"
"│er: roads (2 fea║│   ⢸   ⢸           ⢸      ⡠⠒⠁  ⢸    ⡇   │"
"│eat 0: LineStrin▼│   ⢸   ⢸       ⢠⠤⠤⠤⢼⠤⠤⠤⣤⠔⠉     ⢸    ⡇   │"
"└◄══████════════►┘│   ⢸   ⢸       ⢸   ⢸⡠⠔⠉⢸       ⢸    ⡇   │"
"┌Properties (all ┐│   ⢸⠉⠉⠉⢹⠉⠉⠉⠉⠉⠉⠉⢹⠉⣉⠝⢻⠉⠉⠉⢹⠉⠉⠉⠉⠉⠉⠉⢹⠉⠉⠉⠉⡇   │"
"│Layers: 3       ││   ⢸   ⢸      ⣀⠼⠮⠤⠤⢼⠤⠤⠤⠼    ×  ⢸    ⡇   │"
"│Features: 6     ││   ⢸   ⢸   ⢀⠤⠊     ⢸       ×   ⢸    ⡇   │"
"└────────────────┘│   ⢸ ⡖⠒⢺⢒⢶⠊⠁       ⢸           ⢸    ⡇   │"
"┌Geometry (all la┐│   ⢸ ⣇⡠⠚⠓⢺⠒⠒⠒⠒⠒⠒⠒⠒⠒⢺⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠚    ⡇   │"
"│Vertices: 29    ││   ⠸⠶⠭⠭⠭⠭⠭⠤⠤⠤⠤⠤⠤⠤⠤⠤⠼⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠇   │"
"│Point: 1        ││                                        │"
"└────────────────┘└────────────────────────────────────────┘"
